# ghc-ar-quickcheck

./: README.md  ghc-ar-quickcheck.cabal
test/: Main.hs
